--- a/src/app/theme/pages/default/default.component.html
+++ b/src/app/theme/pages/default/default.component.html
@@ -1,2 +1,2 @@
-<app-aside-nav style="overflow: scroll" *ngIf="appService.canShowSideNav"></app-aside-nav>
+<!--<app-aside-nav style="overflow: scroll" *ngIf="appService.canShowSideNav"></app-aside-nav>-->
 <router-outlet *ngIf="appService.canShowSideNav"></router-outlet>
