--- a/src/app/auth/login/login.component-2.html
+++ b/src/app/auth/login/login.component-2.html
@@ -1,10 +1,21 @@
-<div class="m-grid__item m-grid__item--fluid m-grid m-grid--hor m-login m-login--singin m-login--2 m-login-2--skin-2" id="m_login" style="background-image: url(./assets/app/media/img//bg/bg-3.jpg);">
+<div class="m-grid__item m-grid__item--fluid m-grid m-grid--hor m-login m-login--singin m-login--2 m-login-2--skin-2" id="m_login" style="background-color: #666">
 	<div class="m-grid__item m-grid__item--fluid	m-login__wrapper">
 		<div class="m-login__container">
 			<div class="m-login__logo">
 				<a href="#">
-					<img src="./assets/img/logo/logo-login.png">
+					<h1 style="color: #eee">BOX593</h1>
 				</a>
+			</div>
+			<div class="m-stack__item m-stack__item--center">
+				<div class="m-login__account">
+							<span class="m-login__account-msg">
+								¿Aún no tienes una cuenta?
+							</span>
+					&nbsp;&nbsp;
+					<a routerLink="/signup" class="m-link m-login__account-link">
+						Regístrate
+					</a>
+				</div>
 			</div>
 			<div class="m-login__signin">
 				<div class="m-login__head">
@@ -20,9 +31,49 @@
 					<div class="form-group m-form__group">
 						<input class="form-control m-input m-login__form-input--last" type="password" placeholder="Password" name="password" [(ngModel)]="model.password" #password="ngModel">
 					</div>
+					<div class="row m-login__form-sub">
+						<div class="col m--align-left">
+							<label class="m-checkbox m-checkbox--focus" style="color: #eee">
+								<input type="checkbox" name="remember" [(ngModel)]="model.remember" #remember="ngModel">
+								Recordarme
+								<span></span>
+							</label>
+						</div>
+						<div class="col m--align-right">
+							<a href="javascript:;" id="m_login_forget_password" class="m-link">
+								Contraseña olvidada?
+							</a>
+						</div>
+					</div>
 					<div class="m-login__form-action">
-						<button [disabled]="loading" [ngClass]="{'m-loader m-loader--right m-loader--light': loading}" id="m_login_signin_submit" class="btn btn-focus m-btn m-btn--pill m-btn--custom m-btn--air m-login__btn m-login__btn--primary">
+						<button [disabled]="loading" [ngClass]="{'m-loader m-loader--right m-loader--light': loading}" id="m_login_signin_submit" class="btn btn-focus m-btn m-btn--pill m-btn--custom">
 							Sign In
+						</button>
+					</div>
+				</form>
+			</div>
+			<div class="m-login__forget-password">
+				<div class="m-login__head">
+					<h3 class="m-login__title">
+						Contraseña Olvidada ?
+					</h3>
+					<div class="m-login__desc">
+						Introduzca su correo para resetear su contraseña:
+					</div>
+				</div>
+				<form (ngSubmit)="f.form.valid && forgotPass()" #f="ngForm" class="m-login__form m-form" action="">
+					<ng-template #alertForgotPass></ng-template>
+					<div class="form-group m-form__group">
+						<input class="form-control m-input" type="text" placeholder="Email" name="email" [(ngModel)]="model.email" #email="ngModel" id="m_email" autocomplete="off">
+					</div>
+					<div class="m-login__form-action">
+						<button [disabled]="loading" [ngClass]="{'m-loader m-loader--right m-loader--light': loading}"
+								id="m_login_forget_password_submit" class="btn btn-focus m-btn m-btn--pill m-btn--custom">
+							Resetear
+						</button>
+						<button [disabled]="loading"  id="m_login_forget_password_cancel"
+								class="btn btn-outline-focus m-btn m-btn--pill m-btn--custom">
+							Cancel
 						</button>
 					</div>
 				</form>
