cambiado logo login y favicon

--- a/src/app/auth/login/login.component-2.html
+++ b/src/app/auth/login/login.component-2.html
@@ -3,7 +3,7 @@
 		<div class="m-login__container">
 			<div class="m-login__logo">
 				<a href="#">
-					<h1 style="color: #eee">BOX593</h1>
+					<img src="./assets/img/logo/logo_login.png" style="width: 200px; height: 200px; object-fit: contain">
 				</a>
 			</div>
 			<div class="m-stack__item m-stack__item--center">
